--- a/style/reservation.scss
+++ b/style/reservation.scss
@@ -311,6 +311,7 @@ body {
 // reservation_box
 .reservation_box {
   width: 1200px;
+  margin: 0 auto;
   display: flex;
   padding-bottom: 100px;
   // reservation_left_box
@@ -318,7 +319,7 @@ body {
     padding-right: 100px;
     .reservation_left_box_title {
       .title {
-        margin-top: 80px;
+        margin: 80px 0 0 10px;
         font-size: 12px;
       }
     }
@@ -369,7 +370,7 @@ body {
           .in_rooms_day {
             display: flex;
           }
-          span{
+          span {
             padding: 0 5px;
           }
         }
@@ -447,13 +448,16 @@ body {
     transform: translateX(-37%);
     margin-left: 0;
   }
+  @include rwd(420) {
+    transform: translateX(-41%);
+  }
   .reservation_right_item {
     .six_title {
       padding-top: 10px;
       font-size: 17px;
       color: #191919;
       font-weight: bold;
-      margin: 0;
+      margin-left: 40px;
     }
     .six_right_main {
       margin: 50px 0 0 30px;
@@ -470,9 +474,13 @@ body {
       @include rwd(600) {
         width: 40%;
       }
+      @include rwd(420) {
+        width: 30%;
+      }
       .six_list {
         .six_num {
           font-size: 16px;
+          font-weight: bolder;
           span {
             font-style: italic;
             font-weight: bolder;
@@ -486,6 +494,8 @@ body {
         }
         p {
           padding: 20px 0 0 50px;
+          font-size: 14px;
+          line-height: 35px;
         }
         .six_icon {
           padding: 0;
@@ -520,8 +530,13 @@ body {
     transform: translateX(-37%);
     margin-left: 0;
   }
+  @include rwd(440) {
+    transform: translateX(-41%);
+    margin-left: 0;
+  }
   .privacy_title {
     padding-top: 20px;
+    margin-left: 40px;
     p {
       font-weight: bolder;
     }
@@ -534,6 +549,9 @@ body {
     }
     @include rwd(600) {
       width: 70%;
+    }
+    @include rwd(400) {
+      width: 60%;
     }
     p {
       padding-bottom: 30px;
@@ -550,6 +568,9 @@ body {
   @include rwd(1200) {
     transform: translateX(-37%);
     margin-left: 0;
+  }
+  @include rwd(420) {
+    transform: translateX(-41%);
   }
   .SSL_title {
     padding: 20px 0 30px 0;
@@ -571,13 +592,21 @@ body {
     @include rwd(570) {
       width: 50%;
     }
+    @include rwd(468) {
+      width: 30%;
+    }
     .SSL_coin {
       display: flex;
       flex-direction: column;
       img {
         width: 400px;
+        @include rwd(468) {
+          width: 260px;
+        }
       }
       p {
+        width: 100%;
+        text-align: center;
         margin-right: 50px;
         @include rwd(570) {
           margin-right: 0;
@@ -585,12 +614,6 @@ body {
         img {
           transform: translateY(-20px);
         }
-      }
-    }
-    .SSL_main {
-      p {
-        width: 100%;
-        text-align: center;
       }
     }
   }
@@ -604,6 +627,9 @@ body {
     transform: translateX(-37%);
     margin-left: 0;
   }
+  @include rwd(420) {
+    transform: translateX(-41%);
+  }
   .login_txt {
     padding: 80px 0 0 30px;
     .account,
@@ -611,13 +637,31 @@ body {
     .forget {
       display: flex;
       p {
+        margin-bottom: 5px;
         padding-right: 70px;
       }
       input {
+        width: 100%;
+        margin-right: 10px;
         padding: 5px 5px;
         border: 1px solid #dedede;
         &:active {
           border: 1px solid #000;
+        }
+      }
+    }
+    .account,
+    .password {
+      display: block;
+      margin-top: 20px;
+      input {
+        padding: 10px 0;
+        border-radius: 10px;
+        @include rwd(499) {
+          width: 40%;
+        }
+        @include rwd(400) {
+          width: 30%;
         }
       }
     }
@@ -626,6 +670,9 @@ body {
       padding: 5px 5px;
       font-size: 12px;
       color: #97999b;
+      @include rwd(499) {
+        margin-left: 0;
+      }
       p {
         padding: 5px 5px;
         cursor: pointer;
@@ -635,6 +682,9 @@ body {
         padding: 10px 40px;
         background-color: #97999b;
         color: #fff;
+        @include rwd(499) {
+          margin-left: 60px;
+        }
       }
     }
     .account {
@@ -651,12 +701,21 @@ body {
       @include rwd(968) {
         justify-content: inherit;
       }
+      @include rwd(499) {
+        display: block;
+      }
       .join_log_in {
+        width: 120px;
         padding: 10px 40px;
         margin-left: 90px;
         color: #97999b;
         border: 1px solid #97999b;
         cursor: pointer;
+        letter-spacing: 2px;
+        @include rwd(499) {
+          padding: 10px 30px;
+          margin: 20px 0 0 0;
+        }
       }
     }
   }
@@ -668,12 +727,21 @@ body {
     @include rwd(968) {
       justify-content: inherit;
     }
+    @include rwd(499) {
+      display: block;
+    }
     .visitor_log_in {
+      width: 120px;
       padding: 10px 40px;
       margin-left: 110px;
+      letter-spacing: 2px;
       color: #97999b;
       border: 1px solid #97999b;
       cursor: pointer;
+      @include rwd(499) {
+        padding: 10px 30px;
+        margin: 20px 0 0 0;
+      }
     }
   }
 }
@@ -686,7 +754,11 @@ body {
     transform: translateX(-37%);
     margin-left: 0;
   }
+  @include rwd(499) {
+    transform: translateX(-41%);
+  }
   .register_txt {
+    width: 96%;
     padding: 80px 0 0 30px;
     .account,
     .password,
@@ -776,19 +848,24 @@ body {
       input {
         margin-right: 10px;
       }
-
     }
     .email {
       input {
         padding: 5px 10px;
       }
-      .email_checkbox{
+      .email_checkbox {
         width: 100%;
         @include rwd(876) {
           width: 70%;
         }
-        @include rwd(650){
+        @include rwd(650) {
           width: 50%;
+        }
+        @include rwd(430) {
+          width: 40%;
+        }
+        @include rwd(350) {
+          width: 30%;
         }
       }
       p {
@@ -806,13 +883,19 @@ body {
       }
       textarea {
         width: 100%;
-        height: 311px;
+        height: 160px;
         border: 1px solid #dedede;
         @include rwd(876) {
           width: 70%;
         }
-        @include rwd(650){
+        @include rwd(650) {
           width: 50%;
+        }
+        @include rwd(430) {
+          width: 40%;
+        }
+        @include rwd(350) {
+          width: 30%;
         }
       }
     }
@@ -823,18 +906,22 @@ body {
       white-space: nowrap;
       display: flex;
       justify-content: end;
-
       @include rwd(876) {
         width: 70%;
       }
-      @include rwd(768){
+      @include rwd(768) {
         margin-left: 0;
       }
       @include rwd(650) {
         width: 50%;
       }
+      @include rwd(430) {
+        width: 40%;
+      }
+      @include rwd(350) {
+        width: 30%;
+      }
       p {
-        
         padding: 10px 40px;
         background-color: #97999b;
         color: #eeeeee;
@@ -878,12 +965,18 @@ body {
           padding: 8px 0;
         }
       }
-      .tel_box{
+      .tel_box {
         @include rwd(876) {
           width: 70%;
         }
-        @include rwd(650){
+        @include rwd(650) {
           width: 50%;
+        }
+        @include rwd(430) {
+          width: 40%;
+        }
+        @include rwd(350) {
+          width: 30%;
         }
       }
     }
@@ -910,8 +1003,17 @@ body {
         @include rwd(876) {
           width: 70%;
         }
-        @include rwd(650){
+        @include rwd(650) {
           width: 50%;
+        }
+        @include rwd(650) {
+          width: 50%;
+        }
+        @include rwd(430) {
+          width: 40%;
+        }
+        @include rwd(350) {
+          width: 30%;
         }
       }
     }
@@ -932,7 +1034,7 @@ body {
     padding: 0 20px;
     display: flex;
     justify-content: space-between;
-    @include rwd(1200){
+    @include rwd(1200) {
       margin: 0 10px;
     }
     .txt {
