--- a/style/header.scss
+++ b/style/header.scss
@@ -253,6 +253,10 @@
   justify-content: space-between;
   background-color: #fff;
   box-shadow: 0 0 15px rgba($color: #000000, $alpha: 0.1);
+  &.on{
+    background-color: transparent;
+    filter: contrast(0) brightness(10);
+  }
   @include rwd(1180) {
     display: flex;
   }
@@ -361,7 +365,6 @@
     }
   }
   &.on {
-    background-color: #fff;
     box-shadow: 0 0 15px rgba($color: #000000, $alpha: 0.1);
     .hd_m_img {
       filter: contrast(100%) brightness(1);
