--- a/style/introduction.scss
+++ b/style/introduction.scss
@@ -137,7 +137,7 @@
       }
     }
     .title_m {
-      width: 100%;
+      width: 87%;
       position: absolute;
       padding: 10px;
       left: 0;
@@ -159,6 +159,7 @@
     margin: initial;
     font-weight: bold;
     position: relative;
+    text-align: center;
   }
   .txt {
     display: flex;
