--- a/style/main.css
+++ b/style/main.css
@@ -576,6 +576,10 @@ img {
   background-color: #fff;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
+.header_m.on {
+  background-color: transparent;
+  filter: contrast(0) brightness(10);
+}
 @media screen and (max-width: 1180px) {
   .header_m {
     display: flex;
@@ -685,7 +689,6 @@ img {
   background: linear-gradient(to top, rgba(59, 175, 219, 0.5) 100%, rgba(54, 175, 101, 0.5) 100%);
 }
 .header_m.on {
-  background-color: #fff;
   box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
 }
 .header_m.on .hd_m_img {
@@ -902,9 +905,9 @@ img {
     border-radius: 15px;
   }
 }
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 460px) {
   .footer .footer_box {
-    padding: 130px 0 90px 10px;
+    padding: 90px 20px;
   }
 }
 .footer .footer_box .wrap {
@@ -1004,6 +1007,12 @@ img {
   max-width: 259px;
   cursor: pointer;
   position: relative;
+}
+@media screen and (max-width: 460px) {
+  .footer .footer_box .wrap .left_box .left_box_img {
+    max-width: 320px;
+    padding-right: 60px;
+  }
 }
 .footer .footer_box .wrap .left_box .title {
   padding-top: 36px;
@@ -1187,6 +1196,11 @@ img {
   padding-top: 5px;
   display: flex;
   justify-content: center;
+}
+@media screen and (max-width: 460px) {
+  .footer .footer_box .wrap .right_box .txt .writer {
+    justify-content: flex-start;
+  }
 }
 .footer .footer_box .wrap .right_box .txt .writer h3 {
   padding-right: 5px;
@@ -1520,7 +1534,7 @@ img {
   }
 }
 .introduction_main .title .title_m {
-  width: 100%;
+  width: 87%;
   position: absolute;
   padding: 10px;
   left: 0;
@@ -1541,6 +1555,7 @@ img {
   margin: initial;
   font-weight: bold;
   position: relative;
+  text-align: center;
 }
 .introduction_main .txt {
   display: flex;
@@ -1969,11 +1984,11 @@ body:has(.privacy_option.on) {
 @media screen and (max-width: 1180px) {
   .menu_bg .wrap .menu_bg_list ul li h2 {
     font-size: 28px;
-    white-space: nowrap;
   }
 }
 .menu_bg .wrap .menu_bg_list ul li p {
   padding-bottom: 10px;
+  white-space: nowrap;
 }
 .menu_bg .wrap .menu_bg_list ul li:hover::after {
   width: 50%;
