--- a/style/rooms.css
+++ b/style/rooms.css
@@ -184,12 +184,19 @@ img {
   background-color: black;
   opacity: 0.2;
 }
-.rooms_bg img {
+.rooms_bg .img {
   height: 640px;
+}
+.rooms_bg .img img {
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .rooms_bg .title {
   position: absolute;
-  top: 15%;
+  top: 30%;
   left: 45%;
   writing-mode: vertical-lr;
   color: #fff;
@@ -268,9 +275,19 @@ img {
   flex-wrap: wrap;
   padding: 0 20px;
 }
+@media screen and (max-width: 960px) {
+  .rooms_item .wrap {
+    padding: 0;
+  }
+}
 .rooms_item .wrap .rooms_list {
   width: 50%;
   padding: 0 15px 50px;
+}
+@media screen and (max-width: 960px) {
+  .rooms_item .wrap .rooms_list {
+    width: 100%;
+  }
 }
 .rooms_item .wrap .rooms_list .rooms_img {
   position: relative;
