--- a/style/stay.css
+++ b/style/stay.css
@@ -184,12 +184,19 @@ img {
   background-color: black;
   opacity: 0.2;
 }
-.clous_content_bg img {
+.clous_content_bg .img {
   height: 640px;
+}
+.clous_content_bg .img img {
+  width: 100%;
+  height: 100%;
+  vertical-align: middle;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 .clous_content_bg .title {
   position: absolute;
-  top: 15%;
+  top: 30%;
   left: 45%;
   writing-mode: vertical-lr;
   color: #fff;
@@ -326,14 +333,23 @@ img {
   padding-top: 10px;
 }
 .clous_content .clous_carousel .clous_carousel_m .slick-track .slick-slide .clous_carousel_m_img {
-  margin-left: 5px;
+  margin-right: 5px;
 }
 .clous_content .clous_carousel .clous_carousel_m .slick-track .slick-slide .clous_carousel_m_img img {
   width: 100%;
   height: 137px;
 }
+@media screen and (max-width: 768px) {
+  .clous_content .clous_carousel .clous_carousel_m .slick-track .slick-slide .clous_carousel_m_img img {
+    width: 209px;
+    height: 209px;
+  }
+}
 .clous_content .clous_carousel .clous_carousel_m .slick-track .slick-slide.slick-current .clous_carousel_m_img {
   margin-left: 0;
+}
+.clous_content .clous_carousel .clous_carousel_m .slick-track .slick-current {
+  padding-right: 5px;
 }
 .clous_content .clous_item {
   width: 40%;
@@ -446,11 +462,12 @@ img {
   background-color: rgb(194, 224, 244);
   font-size: 18px;
 }
-.rooms_caption .linshan_icon {
+.rooms_caption .rooms_item {
   padding-top: 20px;
 }
-.rooms_caption .linshan_icon h2 {
-  width: 20%;
+.rooms_caption .rooms_item h2 {
+  width: 100%;
+  max-width: 310px;
   padding: 10px 0;
   margin: 20px 0;
   text-align: center;
@@ -459,7 +476,7 @@ img {
   border: 1px solid #63bedf;
   cursor: pointer;
 }
-.rooms_caption .linshan_icon h2:hover {
+.rooms_caption .rooms_item h2:hover {
   color: #63bedf;
   background-color: #fff;
 }
@@ -701,8 +718,10 @@ img {
   padding-top: 10px;
   margin-left: 5px;
 }
-.linshan_content .linshan_carousel .linshan_carousel_m .slick-track .slick-slide .linshan_carousel_m_img {
-  margin-left: 5px;
+@media screen and (max-width: 480px) {
+  .linshan_content .linshan_carousel .linshan_carousel_m .slick-track .slick-slide .linshan_carousel_m_img {
+    margin-left: 5px;
+  }
 }
 .linshan_content .linshan_carousel .linshan_carousel_m .slick-track .slick-slide .linshan_carousel_m_img img {
   width: 100%;
